# LSLB

./: LICENSE  README.md
assessment/: asante_twi.csv  assessment_visualize.ipynb  japanese.csv  jinghpaw.csv  south_azerbaijani.csv
exp_ne/: README.md  eval_dummy.json  flores_ner.py  pyproject.toml  results.json  system_prompt.txt  user_prompt_template.txt  visualize.ipynb
exp_ne/assessment/: jinghpaw.csv  south_azerbaijani.csv
jinghpaw-mt/: README.md  datasets.yaml  main.py  pyproject.toml  utils.py
jinghpaw-mt/data/conv/: kac_conv.en  kac_conv.kac
jinghpaw-mt/data/dictionary/collocation/: collocation.ja  collocation.kac
jinghpaw-mt/data/dictionary/examples/: dic4ex.en  dic4ex.ja  dic4ex.kac
jinghpaw-mt/data/dictionary/headwords/: headwords.en  headwords.ja  headwords.kac
jinghpaw-mt/data/paradisec/: dev.clean.kac  test.clean.kac
jinghpaw-mt/data/textbook/: textbook.en  textbook.ja  textbook.kac
