[tool.poetry]
name = "flores-check"
version = "0.1.0"
description = "Flores benchmark assessment."
authors = ["Chihiro Taguchi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.78.0"
datasets = "^3.6.0"
python-dotenv = "^1.1.0"
sacrebleu = "^2.5.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
jiwer = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
